# ai-training

./: 001 - Virtual environments.ipynb  002 - Basic python.ipynb  003 - Data Analysis.ipynb  004 - Introduction to Machine Learning.ipynb  005 - Introduction to deep learning.ipynb  006 - Introduction to LLMs with LangChain.ipynb  README.md  pyproject.toml
my_module/: a_simple_python_module.py
